syntax = "proto3";

package filetransfer;

service FileTransfer {
  rpc UploadFile(stream UploadRequest) returns (UploadResponse) {}
  rpc DownloadFile(DownloadRequest) returns (stream DownloadResponse) {}
}

message UploadRequest {
  bytes file_content = 1;
}

message UploadResponse {
  bool success = 1;
}

message DownloadRequest {
  string file_name = 1;
}

message DownloadResponse {
  bytes file_content = 1;
}
